fix(ui): fix cursor in the dark mode

--- a/packages/ui/src/editor/editor.css
+++ b/packages/ui/src/editor/editor.css
@@ -12,6 +12,10 @@
     font-family: Menlo, Monaco, 'Courier New', monospace;
 }
 
+.editor .cm-editor .cm-content {
+    caret-color: currentColor;
+}
+
 .editor .cm-editor .cm-tooltip {
     background-color: var(--code-background-color);
     border-color: var(--control-border-color);
